--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
      <a href="Home.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <nav>  
        
-        <a href="Home.html">Home &nbsp;&nbsp;|</a>
+        <a href="index.html">Home &nbsp;&nbsp;|</a>
         <a href="about.html">&nbsp;&nbsp;About Us &nbsp;&nbsp; |</a>
         <a href="contact.html"> &nbsp; &nbsp;Contact &nbsp;&nbsp;|</a>
         <a href="blog.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
