--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,10 @@
 
 
 <body>
-     <a href="Home.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
+     <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <nav>  
        
-        <a href="Home.html">Home &nbsp;&nbsp;|</a>
+        <a href="index.html">Home &nbsp;&nbsp;|</a>
         <a href="about.html">&nbsp;&nbsp;About Us &nbsp;&nbsp; |</a>
         <a href="contact.html"> &nbsp; &nbsp;Contact &nbsp;&nbsp;|</a>
         <a href="blog.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
