--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 
 <body>
 <body>
-     <a href="Home.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
+     <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <nav>  
        
         <a href="index.html">Home &nbsp;&nbsp;|</a>
