--- a/tournaments.html
+++ b/tournaments.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:black">
-     <a href="Home.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
+     <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <nav>  
        
         <a href="index.html">Home &nbsp;&nbsp;|</a>
