--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-     <a href="Home.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
+     <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <nav>  
        
         <a href="index.html">Home &nbsp;&nbsp;|</a>
