--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
 
     <p style="color:rgb(255, 254, 254)">You may feel free to contact us at any time, and we shall respond within the next 24 hours itself.</p>
 
-    <h2 style="color:rgb(255, 254, 254)"><img src="image/mail.jpg" width="20" height="20" alt="mail">WRITE TO US : <a href="mailto:apngaimg1001@gmail.com">apngaimg1001@gmail.com</a></h2>
+    <h2 style="color:rgb(255, 254, 254)"><img src="image/images.jpg" width="20" height="20" alt="mail">WRITE TO US : <a href="mailto:apngaimg1001@gmail.com">apngaimg1001@gmail.com</a></h2>
 
-    <h2 style="color:rgb(255, 254, 254)"><img src="image/phone.jpg" width="25" height="25" alt="phone">CALL US AT : <dl>
+    <h2 style="color:rgb(255, 254, 254)"><img src="image/images2.jpg" width="25" height="25" alt="phone">CALL US AT : <dl>
         <dt>ARYAN :
             <dd>+91 9971651740</dd>
         </dt>
