--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <a href="login.html"> &nbsp;&nbsp;Login</a>
     </nav>
 
-<h1 id="about" style="color:rgb(255, 254, 254)"><u><i>ABOUT US</i></u></h1>
+<h1 id="about" style="color:rgb(255, 254, 254); text-align:center;"><u><i>ABOUT US</i></u></h1>
 
   <p style="color:rgb(255, 254, 254)">Hi, there! We are a team of 3 highly motivated, highly enthusiastic gamers Aryan, Pranav and Nischay, all of
    us having our roots in the Indian Capital City of New Delhi.  </p>
