--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-     <img src="image\logo.jpeg" alt="logo" height="10%" width="20%">
+  <marquee> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></marquee>
     <nav>  
        
         <a href="index.html">Home &nbsp;&nbsp;|</a>
