--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <centre><h1><p style="color:rgb(255, 254, 254)"></font>GAMING WITHOUT VPN, ALWAYS!</h1></p></h1> </centre>
 
-    <p><button type="button"><a href="#login">GET STARTED!</a></button></p>
+    <p><button type="button"><a href="login.html">GET STARTED!</a></button></p>
          
   </body>
 
