--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 
 <body>
      <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
-    <nav>  
+    <navbar>  
        
         <a href="index.html">Home &nbsp;&nbsp;|</a>
         <a href="about.html">&nbsp;&nbsp;About Us &nbsp;&nbsp; |</a>
@@ -18,7 +18,7 @@
         <a href="blog.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
         <a href="tournaments.html">&nbsp;&nbsp;Tournaments &nbsp;&nbsp;|</a>
         <a href="login.html"> &nbsp;&nbsp;Login</a>
-    </nav>
+    </navbar>
     <p class="gamename"><img src="image/Valo_Icon.png"></p>
     <span class="content">
 
