--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
 
 
 <body>
+	<header>
      <a href="index.html"> <img src="image\logo.jpeg" alt="logo" height="10%" width="20%"></a>
     <navbar>  
        
@@ -19,6 +20,7 @@
         <a href="tournaments.html">&nbsp;&nbsp;Tournaments &nbsp;&nbsp;|</a>
         <a href="login.html"> &nbsp;&nbsp;Login</a>
     </navbar>
+	</header>
     <p class="gamename"><img src="image/Valo_Icon.png"></p>
     <span class="content">
 
