--- a/Personal information.html
+++ b/Personal information.html
@@ -18,8 +18,8 @@
         <a href="index.html">Home &nbsp;&nbsp;|</a>
         <a href="about.html">&nbsp;&nbsp;About Us &nbsp;&nbsp; |</a>
         <a href="contact.html"> &nbsp; &nbsp;Contact &nbsp;&nbsp;|</a>
-        <a href="blogs.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
-        <a href="tournamnets.html">&nbsp;&nbsp;Tournaments &nbsp;&nbsp;|</a>
+        <a href="blog.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
+        <a href="tournaments.html">&nbsp;&nbsp;Tournaments &nbsp;&nbsp;|</a>
         <a href="login.html"> &nbsp;&nbsp;Login</a>
     </nav>
 
@@ -47,4 +47,4 @@
 
 </body>
 
-</html> 
+</html>
