--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="index.html">Home &nbsp;&nbsp;|</a>
         <a href="about.html">&nbsp;&nbsp;About Us &nbsp;&nbsp; |</a>
         <a href="contact.html"> &nbsp; &nbsp;Contact &nbsp;&nbsp;|</a>
-        <a href="blog.html">&nbsp;&nbsp;Blogs &nbsp;&nbsp;|</a>
+        <a href="blog.html">&nbsp;&nbsp;Blog &nbsp;&nbsp;|</a>
         <a href="tournaments.html">&nbsp;&nbsp;Tournaments &nbsp;&nbsp;|</a>
         <a href="login.html"> &nbsp;&nbsp;Login</a>
     </nav>
